<resources>
    <string name="app_name">SQL APP3</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello wold!</string>
    <string name="Add_new">Add new</string>

    <string name="edit">Edit</string>
    <string name="delete">Delete Contact</string>
    <string name="title_activity_display_contact">Display Contact</string>

    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="street">Street</string>
    <string name="country">City/State/Zip</string>

    <string name="save">Save</string>
    <string name="deleteContact">Are you sure, you want to delete it</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>


</resources>
